Adding the google calendar changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,8 +28,8 @@ google.api.tokens.directory=tokens
 google.api.application.name=Skill Sharing Platform
 
 # Logging
-logging.level.com.skillsharing=INFO
-logging.level.org.springframework.security=INFO
-logging.level.org.springframework.web=DEBUG
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.com.skillsharing=info
+logging.level.org.springframework.security=info
+logging.level.org.springframework.web=info
+logging.level.org.hibernate.SQL=info
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=info
